@@ -1,6 +1,7 @@
 Revision history for Try-Tiny
 
 {{$NEXT}}
+  - also throw an exception for catch/finally in scalar context (RT#81070)
 
 0.13  2013-07-04
   - fix tests failing on 5.6.x due to differing DESTROY semantics
